--- a/loginstyle.css
+++ b/loginstyle.css
@@ -26,5 +26,54 @@ body{
 }
 
 #emailtext{
-    
+    color: white;
+    font-family: pixel;
+    font-size: 15px;
+    position: absolute;
+    margin-left: 65px;
+    top: 100px;
+
+
+}
+
+#email{
+
+    border: 2px solid white;
+    color: white;
+    font-family: pixel;
+    background-color: transparent;
+    font-size: 10px;
+    border-radius: 5px;
+    margin-left: 65px;
+    width: 350px;
+    height: 25px;
+    position: absolute;
+    top: 140px;
+
+}
+#passtext{
+    color: white;
+    font-family: pixel;
+    font-size: 15px;
+    position: absolute;
+    margin-left: 65px;
+    top: 200px;
+
+
+}
+
+#pass{
+
+    border: 2px solid white;
+    color: white;
+    font-family: pixel;
+    background-color: transparent;
+    font-size: 10px;
+    border-radius: 5px;
+    margin-left: 65px;
+    width: 350px;
+    height: 25px;
+    position: absolute;
+    top: 240px;
+
 }
