--- a/signstyle.css
+++ b/signstyle.css
@@ -148,3 +148,23 @@ body{
     left: 95px;
     font-family: pixel;
 }
+
+#nav{
+    background-color: #5AA6D1;
+    width: 100%;
+    height: 100px;
+    border-radius: 15px;
+    position: absolute;
+    left: 0px;
+    top: -20px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+#navtitle{
+    font-family: pixel;
+    color: white;
+    font-size: 30px;
+    position: absolute;
+    left: 20px;
+    top: 8px;
+}
