--- a/style.css
+++ b/style.css
@@ -55,3 +55,31 @@ top: 30px;
     }
     
 }
+
+#pfp{
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    border: 2px solid white;
+    position: absolute;
+    top: 30px;
+    left: 30px;
+}
+
+#firstnamedisplay{
+    font-family: pixel;
+    color: white;
+    font-size: 15px;
+    position: absolute;
+    left: 100px;
+    top: 20px;
+}
+
+#lastnamedisplay{
+    font-family: pixel;
+    color: white;
+    font-size: 15px;
+    position: absolute;
+    left: 100px;
+    top: 40px;
+}
