--- a/settingsstyle.css
+++ b/settingsstyle.css
@@ -37,16 +37,16 @@ body{
     color: white;
     font-size: 20px;
     position: absolute;
-    left: 100px;
-    top: 100px;
+    left: 60px;
+    top: 200px;
 }
 #lastname{
     font-family: pixel;
     color: white;
     font-size: 20px;
     position: absolute;
-    left: 300px;
-    top: 100px;
+    left: 180px;
+    top: 200px;
 }
 
 
@@ -55,16 +55,25 @@ body{
     color: #82CCF0;
     font-size: 10px;
     position: absolute;
-    left: 100px;
-    top: 80px;
+    left: 60px;
+    top: 190px;
 }
 #last{
     font-family: pixel;
     color: #82CCF0;
     font-size: 10px;
     position: absolute;
-    left: 300px;
-    top: 80px;
+    left: 180px;
+    top: 190px;
+}
+
+#emailtext{
+    font-family: pixel;
+    color: #82CCF0;
+    font-size: 10px;
+    position: absolute;
+    left: 60px;
+    top: 290px;
 }
 
 #email{
@@ -72,14 +81,43 @@ body{
     color: white;
     font-size: 20px;
     position: absolute;
-    left: 300px;
-    top: 100px;
+    left: 60px;
+    top: 300px;
+}
+
+#passwordtext{
+    font-family: pixel;
+    color: #82CCF0;
+    font-size: 10px;
+    position: absolute;
+    left: 60px;
+    top: 370px;
 }
 #password{
     font-family: pixel;
     color: white;
     font-size: 20px;
     position: absolute;
-    left: 300px;
-    top: 100px;
+    left: 60px;
+    top: 380px;
+}
+
+#changpass{
+    background-color: #3B89BA;
+    border: 2px solid #3B89BA;
+    width: 150px;
+    height: 30px;
+    color: #82CCF0;
+    border-radius: 15px;
+    position: absolute;
+    font-size: 10px;
+    font-family: pixel;
+    left: 200px;
+    top: 390px;
+    transition-duration: 0.4s;
+}
+
+#changpass:hover{
+    background-color: #1B699E;
+    border: 2px solid #1B699E;
 }
