--- a/settingsstyle.css
+++ b/settingsstyle.css
@@ -121,3 +121,53 @@ body{
     background-color: #1B699E;
     border: 2px solid #1B699E;
 }
+
+#delete{
+    background-color: #3B89BA;
+    border: 2px solid #3B89BA;
+    width: 200px;
+    height: 30px;
+    color: #82CCF0;
+    border-radius: 15px;
+    position: absolute;
+    font-size: 15px;
+    font-family: pixel;
+    left: 60px;
+    top: 500px;
+    transition-duration: 0.4s;
+}
+
+#delete:hover{
+    background-color: #1B699E;
+    border: 2px solid #1B699E;
+}
+
+#warn{
+    font-family: pixel;
+    color: #ffffff;
+    font-size: 10px;
+    position: absolute;
+    left: 60px;
+    top: 530px;
+    margin-right: 600px;
+}
+
+#back{
+    background-color: #3B89BA;
+    border: 2px solid #3B89BA;
+    width: 200px;
+    height: 40px;
+    color: #82CCF0;
+    border-radius: 15px;
+    position: absolute;
+    font-size: 15px;
+    font-family: pixel;
+    left: 60px;
+    top: 700px;
+    transition-duration: 0.4s;
+}
+
+#back:hover{
+    background-color: #1B699E;
+    border: 2px solid #1B699E;
+}
