--- a/homestyle.css
+++ b/homestyle.css
@@ -87,12 +87,49 @@ body{
     border: 2px solid #1B699E;
 }
 
+#abouts{
+    width: 99%;
+    height: 2000px;
+    position: absolute;
+    top: 100px;
+}
+
 #welcome{
     font-family: pixel;
     font-size: 40px;
     color: white;
     position: absolute;
-    top: 50%;
+    top: 100px;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+#info1{
+    font-family: pixel;
+    font-size: 40px;
+    color: white;
+    position: absolute;
+    top: 400px;
+    left: 10%;
+    
+}
+
+#info2{
+    font-family: pixel;
+    font-size: 40px;
+    color: white;
+    position: absolute;
+    top: 800px;
+    right: 10%;
+    
+}
+
+#info3{
+    font-family: pixel;
+    font-size: 40px;
+    color: white;
+    position: absolute;
+    top: 1200px;
+    left: 10%;
+    
 }
