--- a/homestyle.css
+++ b/homestyle.css
@@ -133,3 +133,26 @@ body{
     left: 10%;
     
 }
+
+#join{
+    background-color: #5AA6D1;
+    border: 2px solid #5AA6D1;
+    width: 600px;
+    height: 60px;
+    color: #ffffff;
+    border-radius: 15px;
+    position: absolute;
+    font-size: 20px;
+    font-family: pixel;
+    left: 50%;
+    top:1600px;
+    transition-duration: 0.4s;
+    transform: translate(-50%, -50%);
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    
+}
+
+#join:hover{
+    background-color: #3B89BA;
+    border: 2px solid #3B89BA;
+}
