--- a/homestyle.css
+++ b/homestyle.css
@@ -1,11 +1,13 @@
-@font-face { font-family: pixel; src: url("Poppins-SemiBold.ttf"); }
+@font-face { font-family: pixel; src: url("SpaceGrotesk-Bold.ttf"); }
+@font-face { font-family: lexend; src: url("Lexend-Bold.ttf"); }
+@font-face { font-family: lexendlight; src: url("Lexend-Light.ttf"); }
 
 body{
-    background-color: #3357B0;
+    background-color: #0b1215;
 }
 
 #homenav{
-    background-color: #5AA6D1;
+    background-color: #101720;
     width: 100%;
     height: 100px;
     border-radius: 15px;
@@ -25,8 +27,8 @@ body{
 }
 
 #login{
-    background-color: #3B89BA;
-    border: 2px solid #3B89BA;
+    background-color: #0b1215;
+    border: 2px solid #0b1215;
     width: 150px;
     height: 50px;
     color: #82CCF0;
@@ -46,11 +48,11 @@ body{
 }
 
 #credits{
-    background-color: #3B89BA;
-    border: 2px solid #3B89BA;
+    background-color: #0b1215;
+    border: 2px solid #0b1215;
     width: 150px;
     height: 50px;
-    color: #82CCF0;
+    color: #ffffff;
     border-radius: 15px;
     position: absolute;
     font-size: 15px;
@@ -67,11 +69,11 @@ body{
 }
 
 #about{
-    background-color: #3B89BA;
-    border: 2px solid #3B89BA;
+    background-color: #0b1215;
+    border: 2px solid #0b1215;
     width: 150px;
     height: 50px;
-    color: #82CCF0;
+    color: #ffffff;
     border-radius: 15px;
     position: absolute;
     font-size: 15px;
@@ -95,24 +97,49 @@ body{
 }
 
 #welcome{
-    font-family: pixel;
-    font-size: 40px;
+    font-family: lexend;
+    font-size: 100px;
     color: white;
     position: absolute;
-    top: 100px;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: 70px;
+    left: 10%;
+    margin-left: 400px;
+    margin-right: 400px;
+    
+    text-align: center;
+    transition-duration: 0.3s;
+    transition-property: transform;
+    transition-timing-function: ease;
+    transition-delay: 0s;
+
+    transition: transform 0.3s;
+
+    animation: shift 500ms ease-in-out;
+}
+
+@keyframes shift {
+    0%{
+        filter: blur(40px);
+        opacity: 0;
+    
+    }
+    100%{
+        filter: blur(0px);
+        opacity: 1;
+        
+    }
+    
 }
 
 #info1{
-    font-family: pixel;
-    font-size: 40px;
+    font-family: lexendlight;
+    font-size: 30px;
     color: white;
     position: absolute;
     top: 400px;
     left: 10%;
     overflow: hidden; 
-  border-right: .10em solid #82CCF0; 
+  border-right: .10em solid #ffffff; 
   white-space: nowrap;
   margin: 0 auto; 
   letter-spacing: .05em; 
@@ -127,11 +154,11 @@ body{
   }
   @keyframes blink-caret {
     from, to { border-color: transparent }
-    50% { border-color: #82CCF0; }
+    50% { border-color: #ffffff; }
   }
 
 #info2{
-    font-family: pixel;
+    font-family: lexend;
     font-size: 40px;
     color: white;
     position: absolute;
@@ -141,7 +168,7 @@ body{
 }
 
 #info3{
-    font-family: pixel;
+    font-family: lexend;
     font-size: 40px;
     color: white;
     position: absolute;
