--- a/homestyle.css
+++ b/homestyle.css
@@ -10,7 +10,7 @@ body{
     background-color: #101720;
     width: 100%;
     height: 100px;
-    border-radius: 15px;
+   
     position: absolute;
     left: 0px;
     top: -20px;
@@ -259,4 +259,36 @@ body{
 #join:hover{
     background-color: #3B89BA;
     border: 2px solid #3B89BA;
+}
+
+#try{
+    background-image: linear-gradient(150deg, #0b1215,#12122e, #13133f, #0c0c3d, #06064d , #0c0c3d , #13133f ,#12122e , #0b1215);
+    background-size: 400%;
+    font-family: lexend;
+    font-size: 20px;
+    color: white;
+    width: 300px;
+    height: 75px;
+    border: transparent;
+    border-radius: 10px;
+    position: absolute;
+    left: 795px;
+    top: 500px;
+   
+
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    
+}
+
+#try:hover{
+    animation: bg-animation 1s ease-in-out infinite alternate;
+}
+
+@keyframes bg-animation {
+    0% {
+        background-position: left;
+    }
+    100% {
+        background-position: right;
+    }
 }
