--- a/homestyle.css
+++ b/homestyle.css
@@ -27,11 +27,11 @@ body{
 }
 
 #login{
-    background-color: #0b1215;
-    border: 2px solid #0b1215;
+    background-color: #101720;
+    border: 2px solid #101720;
     width: 150px;
     height: 50px;
-    color: #82CCF0;
+    color: #ffffff;
     border-radius: 15px;
     position: absolute;
     font-size: 15px;
@@ -43,13 +43,13 @@ body{
 }
 
 #login:hover{
-    background-color: #1B699E;
-    border: 2px solid #1B699E;
+    background-color: #0b1215;
+    border: 2px solid #0b1215;
 }
 
 #credits{
-    background-color: #0b1215;
-    border: 2px solid #0b1215;
+    background-color: #101720;
+    border: 2px solid #101720;
     width: 150px;
     height: 50px;
     color: #ffffff;
@@ -64,13 +64,13 @@ body{
 }
 
 #credits:hover{
-    background-color: #1B699E;
-    border: 2px solid #1B699E;
+    background-color: #0b1215;
+    border: 2px solid #0b1215;
 }
 
 #about{
-    background-color: #0b1215;
-    border: 2px solid #0b1215;
+    background-color: #101720;
+    border: 2px solid #101720;
     width: 150px;
     height: 50px;
     color: #ffffff;
@@ -85,15 +85,16 @@ body{
 }
 
 #about:hover{
-    background-color: #1B699E;
-    border: 2px solid #1B699E;
+    background-color: #0b1215;
+    border: 2px solid #0b1215;
 }
 
 #abouts{
     width: 99%;
-    height: 2000px;
+    height: 900px;
     position: absolute;
     top: 100px;
+    
 }
 
 #welcome1{
@@ -277,7 +278,21 @@ body{
    
 
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-    
+   
+}
+
+
+
+@keyframes introeff {
+    0%{
+        opacity: 0;
+        filter: blur(40px);
+    }
+
+    100%{
+        opacity: 1;
+        filter: blur(0px);
+    }
 }
 
 #try:hover{
@@ -291,4 +306,12 @@ body{
     100% {
         background-position: right;
     }
+}
+
+#infostuff{
+    width: 100%;
+    height: 1000px;
+    position: absolute;
+    top: 900px;
+   
 }
