--- a/homestyle.css
+++ b/homestyle.css
@@ -36,7 +36,7 @@ body{
     position: absolute;
     font-size: 15px;
     font-family: pixel;
-    right: 80px;
+    left: 180px;
     top:35px;
     transition-duration: 0.4s;
     
@@ -47,25 +47,12 @@ body{
     border: 2px solid #0b1215;
 }
 
-#credits{
-    background-color: #101720;
-    border: 2px solid #101720;
-    width: 150px;
+#git{
+    width: 50px;
     height: 50px;
-    color: #ffffff;
-    border-radius: 15px;
-    position: absolute;
-    font-size: 15px;
-    font-family: pixel;
-    right: 240px;
-    top:35px;
-    transition-duration: 0.4s;
-    
-}
-
-#credits:hover{
-    background-color: #0b1215;
-    border: 2px solid #0b1215;
+    position: fixed;
+    right: 40px;
+    top: 15px;
 }
 
 #about{
@@ -78,7 +65,7 @@ body{
     position: absolute;
     font-size: 15px;
     font-family: pixel;
-    right: 400px;
+    left: 340px;
     top:35px;
     transition-duration: 0.4s;
     
@@ -221,12 +208,22 @@ body{
 
 #info2{
     font-family: lexend;
-    font-size: 40px;
+    font-size: 50px;
     color: white;
     position: absolute;
-    top: 800px;
-    right: 10%;
+    top: 150px;
+    left: 5%;
     
+}
+
+#infoinfo2{
+    font-family: lexendlight;
+    font-size: 30px;
+    color: white;
+    position: absolute;
+    top: 230px;
+    left: 5%;
+    margin-right: 900px;
 }
 
 #info3{
@@ -309,9 +306,20 @@ body{
 }
 
 #infostuff{
-    width: 100%;
+    width: 99%;
     height: 1000px;
     position: absolute;
     top: 900px;
-   
+    background-image: linear-gradient(150deg, #0b1215,#12122e, #13133f, #0c0c3d, #06064d , #0c0c3d , #13133f ,#12122e , #0b1215);
+   filter: blur(40px);
+   z-index: -1;
+}
+
+#infoinfo{
+    width: 99%;
+    height: 1000px;
+    position: absolute;
+    top: 900px;
+    z-index: 1;
+
 }
