--- a/homestyle.css
+++ b/homestyle.css
@@ -228,11 +228,13 @@ body{
 
 #info3{
     font-family: lexend;
-    font-size: 40px;
+    font-size: 50px;
     color: white;
     position: absolute;
-    top: 1200px;
-    left: 10%;
+    top: 200px;
+    left: 50%;
+    text-align: center;
+    transform: translate(-50%, -50%);
     
 }
 
@@ -322,4 +324,12 @@ body{
     top: 900px;
     z-index: 1;
 
+}
+
+#infoinfo1{
+    width: 99%;
+    height: 1000px;
+    position: absolute;
+    top: 1900px;
+    z-index: 1;
 }
