--- a/signstyle.css
+++ b/signstyle.css
@@ -1,11 +1,88 @@
-@font-face { font-family: pixel; src: url("Poppins-SemiBold.ttf"); }
-
+@font-face { font-family: pixel; src: url("SpaceGrotesk-Bold.ttf"); }
+@font-face { font-family: lexend; src: url("Lexend-Bold.ttf"); }
+@font-face { font-family: lexendlight; src: url("Lexend-Light.ttf"); }
 body{
-    background-color: #3357B0;
+    background-color: #0b1215;
+}
+#homenav{
+    background-color: #101720;
+    width: 100%;
+    height: 100px;
+   
+    position: absolute;
+    left: 0px;
+    top: -20px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
+#navtitle{
+    font-family: pixel;
+    color: white;
+    font-size: 30px;
+    position: absolute;
+    left: 20px;
+    top: 8px;
+}
+
+#login{
+    background-color: #101720;
+    border: 2px solid #101720;
+    width: 150px;
+    height: 50px;
+    color: #ffffff;
+    border-radius: 15px;
+    position: absolute;
+    font-size: 15px;
+    font-family: lexend;
+    left: 180px;
+    top:35px;
+    transition-duration: 0.4s;
+    
+}
+
+#login:hover{
+    background-color: #0b1215;
+    border: 2px solid #0b1215;
+}
+
+#git{
+    width: 50px;
+    height: 50px;
+    position: fixed;
+    right: 40px;
+    top: 15px;
+}
+
+#about{
+    background-color: #101720;
+    border: 2px solid #101720;
+    width: 150px;
+    height: 50px;
+    color: #ffffff;
+    border-radius: 15px;
+    position: absolute;
+    font-size: 15px;
+    font-family: lexend;
+    left: 340px;
+    top:35px;
+    transition-duration: 0.4s;
+    
+}
+
+#about:hover{
+    background-color: #0b1215;
+    border: 2px solid #0b1215;
+}
+
+#abouts{
+    width: 99%;
+    height: 900px;
+    position: absolute;
+    top: 100px;
+    
+}
 #createback{
-    background-color: #5AA6D1;
+    background-color: #101720;
     width: 500px;
     height: 600px;
     border-radius: 15px;
@@ -21,13 +98,13 @@ body{
     font-family: pixel;
     font-size: 30px;
     position: absolute;
-    left: 125px;
+    left: 135px;
 
 }
 
 #emailtext{
     color: white;
-    font-family: pixel;
+    font-family: lexend;
     font-size: 15px;
     position: absolute;
     margin-left: 65px;
@@ -40,7 +117,7 @@ body{
 
     border: 2px solid white;
     color: white;
-    font-family: pixel;
+    font-family: lexend;
     background-color: transparent;
     font-size: 10px;
     border-radius: 5px;
@@ -53,20 +130,18 @@ body{
 }
 #passtext{
     color: white;
-    font-family: pixel;
+    font-family: lexend;
     font-size: 15px;
     position: absolute;
     margin-left: 65px;
     top: 200px;
-
-
 }
 
 #pass{
 
     border: 2px solid white;
     color: white;
-    font-family: pixel;
+    font-family: lexend;
     background-color: transparent;
     font-size: 10px;
     border-radius: 5px;
@@ -79,24 +154,32 @@ body{
 }
 
 #submit{
-    background-color: #3B89BA;
-    border: 2px solid #3B89BA;
+    background-image: linear-gradient(150deg, #0b1215,#12122e, #13133f, #0c0c3d, #06064d , #0c0c3d , #13133f ,#12122e , #0b1215);
+    border: transparent;
     width: 250px;
     height: 40px;
-    color: #82CCF0;
+    color: #ffffff;
     border-radius: 15px;
     position: absolute;
     font-size: 15px;
-    font-family: pixel;
+    font-family: lexend;
     left: 120px;
     top: 350px;
     transition-duration: 0.4s;
+    background-size: 400%;
 
 }
 
 #submit:hover{
-    background-color: #1B699E;
-    border: 2px solid #1B699E;
+    animation: bg-animation 1s ease-in-out infinite alternate;
+}
+@keyframes bg-animation {
+    0% {
+        background-position: left;
+    }
+    100% {
+        background-position: right;
+    }
 }
 
 #gitcreate{
@@ -142,17 +225,17 @@ body{
 }
 
 #loginoki{
-    color: #82CCF0;
+    color: #ffffff;
     position: absolute;
     top: 400px;
     left: 95px;
-    font-family: pixel;
+    font-family: lexend;
 }
 
 
 
 #createbacklog{
-    background-color: #5AA6D1;
+    background-color: #101720;
     width: 500px;
     height: 600px;
     border-radius: 15px;
@@ -176,7 +259,7 @@ body{
 
 #emailtextlog{
     color: white;
-    font-family: pixel;
+    font-family: lexend;
     font-size: 15px;
     position: absolute;
     margin-left: 65px;
@@ -190,7 +273,7 @@ body{
 
     border: 2px solid white;
     color: white;
-    font-family: pixel;
+    font-family: lexend;
     background-color: transparent;
     font-size: 10px;
     border-radius: 5px;
@@ -204,7 +287,7 @@ body{
 }
 #passtextlog{
     color: white;
-    font-family: pixel;
+    font-family: lexend;
     font-size: 15px;
     position: absolute;
     margin-left: 65px;
@@ -218,7 +301,7 @@ body{
 
     border: 2px solid white;
     color: white;
-    font-family: pixel;
+    font-family: lexend;
     background-color: transparent;
     font-size: 10px;
     border-radius: 5px;
@@ -232,11 +315,11 @@ body{
 }
 
 #submit2{
-    background-color: #3B89BA;
-    border: 2px solid #3B89BA;
+    background-image: linear-gradient(150deg, #0b1215,#12122e, #13133f, #0c0c3d, #06064d , #0c0c3d , #13133f ,#12122e , #0b1215);
+    border: transparent;
     width: 250px;
     height: 40px;
-    color: #82CCF0;
+    color: #ffffff;
     border-radius: 15px;
     position: absolute;
     font-size: 15px;
@@ -249,9 +332,18 @@ body{
 }
 
 #submit2:hover{
-    background-color: #1B699E;
-    border: 2px solid #1B699E;
+    animation: bg-animation2 1s ease-in-out infinite alternate;
 }
+
+@keyframes bg-animation2 {
+    0% {
+        background-position: left;
+    }
+    100% {
+        background-position: right;
+    }
+}
+
 
 #gitcreate{
     background-color: #3B89BA;
