--- a/signstyle.css
+++ b/signstyle.css
@@ -327,6 +327,7 @@ body{
     left: 120px;
     top:350px;
     transition-duration: 0.4s;
+    background-size: 400%;
   
 
 }
@@ -415,4 +416,63 @@ body{
     position: absolute;
     left: 20px;
     top: 8px;
+}
+
+#here1{
+    background-image: linear-gradient(150deg, #0b1215,#12122e, #13133f, #0c0c3d, #06064d , #0c0c3d , #13133f ,#12122e , #0b1215);
+    border: transparent;
+    width: 60px;
+    height: 30px;
+    color: #ffffff;
+    border-radius: 5px;
+    position: absolute;
+    font-size: 15px;
+    font-family: pixel;
+    right: 70px;
+    top:412px;
+    transition-duration: 0.4s;
+    background-size: 400%;
+  
+}
+
+#here1:hover{
+    animation: bg-animation3 1s ease-in-out infinite alternate;
+}
+
+@keyframes bg-animation3 {
+    0% {
+        background-position: left;
+    }
+    100% {
+        background-position: right;
+    }
+}
+#here2{
+    background-image: linear-gradient(150deg, #0b1215,#12122e, #13133f, #0c0c3d, #06064d , #0c0c3d , #13133f ,#12122e , #0b1215);
+    border: transparent;
+    width: 60px;
+    height: 30px;
+    color: #ffffff;
+    border-radius: 5px;
+    position: absolute;
+    font-size: 15px;
+    font-family: pixel;
+    right: 70px;
+    top:412px;
+    transition-duration: 0.4s;
+    background-size: 400%;
+  
+}
+
+#here2:hover{
+    animation: bg-animation4 1s ease-in-out infinite alternate;
+}
+
+@keyframes bg-animation4 {
+    0% {
+        background-position: left;
+    }
+    100% {
+        background-position: right;
+    }
 }
