--- a/homestyle.css
+++ b/homestyle.css
@@ -333,3 +333,56 @@ body{
     top: 1900px;
     z-index: 1;
 }
+
+#infoinforeal2{
+    width: 99%;
+    height: 1000px;
+    position: absolute;
+    top: 2900px;
+    z-index: 1;
+
+}
+
+#panel1{
+    background-image: linear-gradient(150deg, #0b1215,#12122e, #13133f, #0c0c3d, #06064d , #0c0c3d , #13133f ,#12122e , #0b1215);
+    width: 99%;
+    height: 300px;
+    filter: blur(40px);
+    position: absolute;
+    top: 550px;
+
+}
+
+#mainpanel1{
+    background-color: #101720;
+    width: 325px;
+    height: 400px;
+    border-radius: 10px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    position: absolute;
+    left: 200px;
+    top: 500px;
+}
+
+#mainpanel2{
+    background-color: #101720;
+    width: 325px;
+    height: 400px;
+    border-radius: 10px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    position: absolute;
+    right: 200px;
+    top: 500px;
+}
+
+#mainpanel3{
+    background-color: #101720;
+    width: 325px;
+    height: 400px;
+    border-radius: 10px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    position: absolute;
+    left: 50%;
+    top: 500px;
+    transform: translate(-50%);
+}
