--- a/homestyle.css
+++ b/homestyle.css
@@ -401,7 +401,7 @@ body{
     border-radius: 10px;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
     position: absolute;
-    left: 750px;
+    left: 775px;
     top: 500px;
      
     transition-duration: 0.3s;
@@ -428,7 +428,8 @@ body{
     font-size: 30px;
     color: white;
     text-align: center;
-    
+     margin-left: 40px;
+    margin-right: 40px;
 
 
 }
@@ -437,6 +438,7 @@ body{
     font-size: 30px;
     color: white;
     text-align: center;
+   
     
 
 }
