--- a/aboutstyle.css
+++ b/aboutstyle.css
@@ -74,3 +74,58 @@ body{
     background-color: #0b1215;
     border: 2px solid #0b1215;
 }
+
+#aboutbacking{
+    background-image: linear-gradient(150deg, #0b1215,#12122e, #13133f, #0c0c3d, #06064d , #0c0c3d , #13133f ,#12122e , #0b1215);
+    width: 99%;
+    height: 300px;
+    filter: blur(40px);
+    position: absolute;
+    top: 250px;
+
+}
+
+#abouts{
+    width: 99%;
+    height: 1000px;
+    position: absolute;
+    left: 0px;
+    top: 100px;
+}
+
+#info1{
+    font-family: lexend;
+    font-size: 40px;
+    color: white;
+    position: absolute;
+    top: 400px;
+    left: 400px;
+    overflow: hidden;  
+  white-space: nowrap;
+  margin: 0 auto; 
+  letter-spacing: .05em; 
+  animation: shift 1200ms ease-in-out;
+}
+    
+@keyframes typing {
+    from { width: 0 }
+    to { width: 590px }
+  }
+  @keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: #ffffff; }
+  }
+
+  @keyframes shift {
+    0%{
+        filter: blur(40px);
+        opacity: 0;
+    
+    }
+    100%{
+        filter: blur(0px);
+        opacity: 1;
+        
+    }
+    
+}
