--- a/aboutstyle.css
+++ b/aboutstyle.css
@@ -78,7 +78,7 @@ body{
 #aboutbacking{
     background-image: linear-gradient(150deg, #0b1215,#12122e, #13133f, #0c0c3d, #06064d , #0c0c3d , #13133f ,#12122e , #0b1215);
     width: 99%;
-    height: 300px;
+    height: 500px;
     filter: blur(40px);
     position: absolute;
     top: 250px;
@@ -87,7 +87,7 @@ body{
 
 #abouts{
     width: 99%;
-    height: 1000px;
+    height: 2000px;
     position: absolute;
     left: 0px;
     top: 100px;
@@ -95,10 +95,10 @@ body{
 
 #info1{
     font-family: lexend;
-    font-size: 40px;
+    font-size: 50px;
     color: white;
     position: absolute;
-    top: 400px;
+    top: 300px;
     left: 400px;
     overflow: hidden;  
   white-space: nowrap;
@@ -106,10 +106,48 @@ body{
   letter-spacing: .05em; 
   animation: shift 1200ms ease-in-out;
 }
+
+#info2{
+    font-family: lexendlight;
+    font-size: 25px;
+    color: white;
+    position: absolute;
+    top: 400px;
+    left: 420px;
+    overflow: hidden; 
+  border-right: .10em solid #ffffff; 
+  white-space: nowrap;
+  margin: 0 auto; 
+  letter-spacing: .05em;
+  margin-left: 100px;
+  margin-right: 100px; 
+  animation: 
+    typing 2s steps(40, end),
+    blink-caret .75s step-end infinite;
+}
+
+#info3{
+    font-family: lexend;
+    font-size: 40px;
+    color: white;
+    position: absolute;
+    top: 1000px;
+    left: 100px;
+    overflow: hidden; 
+  border-right: .10em solid #ffffff; 
+  white-space: nowrap;
+  margin: 0 auto; 
+  letter-spacing: .05em;
+  margin-left: 100px;
+  margin-right: 100px; 
+  animation: 
+    typing 2s steps(40, end),
+    blink-caret .75s step-end infinite;
+}
     
 @keyframes typing {
     from { width: 0 }
-    to { width: 590px }
+    to { width: 800px }
   }
   @keyframes blink-caret {
     from, to { border-color: transparent }
