--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
 #sidenav{
     height: 100%;
     width: 300px;
-    position: absolute;
+    position: fixed;
     left: -20px;
     top: 0px;
     border-radius: 15px;
@@ -89,17 +89,35 @@ top: 30px;
 #backtitle{
     background-image: linear-gradient(150deg, #0b1215,#12122e, #13133f, #0c0c3d, #06064d , #0c0c3d , #13133f ,#12122e , #0b1215);
     width: 75%;
-    height: 300px;
+    height: 200px;
     filter: blur(40px);
     position: absolute;
-    top: 100px;
-    left: 100px;
+    top: 50px;
+    left: 50px;
 
 }
 
 #welcomepage{
     position: absolute;
-    height: 99%;
+    height: 2000px;
     left: 300px;
     width: 2000px;
+}
+
+#welcomeok{
+    font-family: lexend;
+    font-size: 50px;
+    color: white;
+    position: absolute;
+    top: 75px;
+    left: 600px;
+}
+
+#tut1{
+    font-family: lexendlight;
+    font-size: 25px;
+    color: white;
+    position: absolute;
+    top: 300px;
+    left: 500px;
 }
